// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PressableTests Pressables can change text on press/rest, state rest 1`] = `
Object {
  "AutomationId": "pressable_press_console",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#E4000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 21,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "",
  "Top": 21,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 656,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`PressableTests Pressables can have delayed event handlers 1`] = `
Object {
  "AutomationId": "pressable_delay_events_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#E4000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 331,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 56,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": Array [
    Object {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": Array [
        Object {
          "Background": "#00FFFFFF",
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "8,8,8,8",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Border",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": "#00000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "8,8,8,8",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 56,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": Array [
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF007AFF",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Press Me",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 56,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can have event handlers 1`] = `
Object {
  "AutomationId": "pressable_feedback_events_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 331,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 56,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": Array [
    Object {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": Array [
        Object {
          "Background": "#00FFFFFF",
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "8,8,8,8",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Border",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": "#00000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "8,8,8,8",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 56,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": Array [
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF007AFF",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Press Me",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 56,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PressableTests Pressables can have hit slop functionality 1`] = `
Object {
  "AutomationId": "pressable_hit_slop_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 286,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 30,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 146,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": Array [
    Object {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": Array [
        Object {
          "Background": "#FFFF0000",
          "BorderBrush": "#00000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 146,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": Array [
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Press Outside This View",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 146,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;
